Updating information of function def parse_weather_question(question) to predict more than 3 days

--- a/Assessment_Weather_App_Final_ipynb.ipynb
+++ b/Assessment_Weather_App_Final_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO7u4idL21mCG7Vm20Fu3R",
+      "authorship_tag": "ABX9TyMJxIkmNc1QAzAcSEC2xsI5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,11 +673,86 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import re\n",
+        "import dateparser\n",
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "def parse_weather_question(question):\n",
+        "    question = question.lower().strip()\n",
+        "    today = datetime.now().date()\n",
+        "\n",
+        "    # ⏱️ Handle common natural phrases\n",
+        "    if \"yesterday\" in question:\n",
+        "        return {\"error\": \"⏳ I can’t provide weather for the past.\"}\n",
+        "    elif \"today\" in question:\n",
+        "        parsed_date = today\n",
+        "    elif \"tomorrow\" in question:\n",
+        "        parsed_date = today + timedelta(days=1)\n",
+        "    elif \"day after tomorrow\" in question:\n",
+        "        parsed_date = today + timedelta(days=2)\n",
+        "    elif re.search(r\"in\\s+(\\d+)\\s+days\", question):\n",
+        "        days_ahead = int(re.search(r\"in\\s+(\\d+)\\s+days\", question).group(1))\n",
+        "        parsed_date = today + timedelta(days=days_ahead)\n",
+        "    else:\n",
+        "        # Try to extract a weekday or natural date\n",
+        "        day_match = re.search(r\"(monday|tuesday|wednesday|thursday|friday|saturday|sunday)\", question)\n",
+        "        if day_match:\n",
+        "            parsed_dt = dateparser.parse(day_match.group(1), settings={'PREFER_DATES_FROM': 'future'})\n",
+        "        else:\n",
+        "            parsed_dt = dateparser.parse(question, settings={'PREFER_DATES_FROM': 'future'})\n",
+        "\n",
+        "        if not parsed_dt:\n",
+        "            return {\"error\": \"❌ Sorry, I couldn't understand the date in your question.\"}\n",
+        "        parsed_date = parsed_dt.date()\n",
+        "\n",
+        "    # 🔢 Determine forecast day\n",
+        "    forecast_day = (parsed_date - today).days\n",
+        "    if forecast_day < 0:\n",
+        "        return {\"error\": \"⏳ I can’t provide weather for the past.\"}\n",
+        "    if forecast_day > 4:\n",
+        "        return {\"error\": \"⚠️ Forecast is only available for up to 5 days from today.\"}\n",
+        "\n",
+        "    # 🏙️ Extract and clean city name\n",
+        "    city_match = re.search(r\"(?:in|at|for)\\s+([a-z\\s]{3,})\", question)\n",
+        "    if not city_match:\n",
+        "        return {\"error\": \"⚠️ Please include a city in your question using phrases like 'in Tokyo' or 'for Melbourne'.\"}\n",
+        "\n",
+        "    location = city_match.group(1).strip()\n",
+        "\n",
+        "    # Clean up date-related words from location\n",
+        "    date_words = [\n",
+        "        'yesterday', 'today', 'tomorrow', 'day', 'after', 'on', 'in', 'at', 'for',\n",
+        "        'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday',\n",
+        "        'next', 'week', 'may', 'june', 'july', 'august', 'september',\n",
+        "        'october', 'november', 'december'\n",
+        "    ]\n",
+        "    for word in date_words:\n",
+        "        location = re.sub(rf\"\\b{word}\\b\", \"\", location)\n",
+        "    location = re.sub(r'\\s+', ' ', location).strip()\n",
+        "\n",
+        "    if not location:\n",
+        "        return {\"error\": \"❌ Sorry, I couldn't detect the city in your question.\"}\n",
+        "\n",
+        "    # 🌦️ Optional weather attribute\n",
+        "    attribute = None\n",
+        "    if \"rain\" in question:\n",
+        "        attribute = \"rain\"\n",
+        "    elif \"hot\" in question:\n",
+        "        attribute = \"hot\"\n",
+        "    elif \"cold\" in question or \"freezing\" in question:\n",
+        "        attribute = \"cold\"\n",
+        "\n",
+        "    return {\n",
+        "        \"location\": location,\n",
+        "        \"forecast_day\": forecast_day,\n",
+        "        \"attribute\": attribute\n",
+        "    }"
+      ],
       "metadata": {
         "id": "kjyzTEvgtepQ"
       },
-      "execution_count": 82,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -700,7 +775,7 @@
     {
       "cell_type": "code",
       "source": [
-        "question=\"Will it rain in Medellin tomorrow?\"\n",
+        "question=\"Will it rain in Medellin on Monday?\"\n",
         "parsed=parse_weather_question(question)\n",
         "print(parsed)"
       ],
@@ -709,15 +784,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3EdTq9_4wWPD",
-        "outputId": "e9902190-9742-4ad4-a3ac-dcf26a28d794"
+        "outputId": "7b6c643f-3a97-4153-9483-8d5f21bd0941"
       },
-      "execution_count": 83,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'location': 'medellin', 'forecast_day': 1, 'attribute': 'rain'}\n"
+            "{'location': 'medellin', 'forecast_day': 3, 'attribute': 'rain'}\n"
           ]
         }
       ]
