Creating function to answer the question def generate_weather_response(parsed_question, weather_data):

--- a/Assessment_Weather_App_Final_ipynb.ipynb
+++ b/Assessment_Weather_App_Final_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJxIkmNc1QAzAcSEC2xsI5",
+      "authorship_tag": "ABX9TyMvs2rXE/qYq0ff1gFvdtb1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -761,7 +761,7 @@
         "Testing parse_weather_question function\n",
         "\n",
         "🧭 How to Ask a Weather Question\n",
-        "🌤️ You can ask about the weather forecast up to 3 days from today.\n",
+        "🌤️ You can ask about the weather forecast up to 5 days from today.\n",
         "📍 Your question must include a city and a time reference like:\n",
         "tomorrow, in 2 days, on Friday, Saturday, etc.\n",
         "✅ Examples:\n",
@@ -784,9 +784,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3EdTq9_4wWPD",
-        "outputId": "7b6c643f-3a97-4153-9483-8d5f21bd0941"
+        "outputId": "7fe353b4-63ad-4344-8f69-7144c0cd1610"
       },
-      "execution_count": 89,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,6 +796,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Answering user questions***\n",
+        "\n",
+        "\n",
+        "This section transforms structured weather data into user-friendly natural language answers based on the user's question."
+      ],
+      "metadata": {
+        "id": "daXJo3JdyQPT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_weather_response(parsed_question, weather_data):\n",
+        "    \"\"\"\n",
+        "    Turn parsed data + weather data into a user-friendly reply.\n",
+        "    \"\"\"\n",
+        "    if \"error\" in parsed_question:\n",
+        "        return f\"❌ {parsed_question['error']}\"\n",
+        "\n",
+        "    location = parsed_question[\"location\"].title()\n",
+        "    forecast_day = parsed_question[\"forecast_day\"]\n",
+        "    attr = parsed_question[\"attribute\"]\n",
+        "\n",
+        "    if forecast_day == 0:\n",
+        "        data = weather_data[\"current_conditions\"]\n",
+        "        response = (\n",
+        "            f\"Today in {location}, it's currently {data['weather'].lower()}, \"\n",
+        "            f\"{data['temperature_C']}°C, with {data['humidity']}% humidity and \"\n",
+        "            f\"winds at {data['windspeed_kmph']} km/h.\"\n",
+        "        )\n",
+        "    else:\n",
+        "        data = weather_data[\"forecast\"][forecast_day]\n",
+        "        response = (\n",
+        "            f\"On {data['date']} in {location}, expect {data['condition'].lower()}, \"\n",
+        "            f\"with a high of {data['max_temp_C']}°C, a low of {data['min_temp_C']}°C, \"\n",
+        "            f\"and about {data['precipMM']} mm of rain.\"\n",
+        "        )\n",
+        "\n",
+        "    # Add weather type interpretation\n",
+        "    extra = \"\"\n",
+        "    if attr == \"rain\":\n",
+        "        precip = float(data.get(\"precipMM\", 0))\n",
+        "        extra = \" ☔ Yes, rain is expected.\" if precip > 0 else \" 🌤 No rain is expected.\"\n",
+        "    elif attr == \"hot\":\n",
+        "        temp = float(data.get(\"max_temp_C\", data.get(\"temperature_C\", 0)))\n",
+        "        extra = \" 🔥 Yes, it will be hot.\" if temp >= 28 else \" 🌡️ Not particularly hot.\"\n",
+        "    elif attr == \"cold\":\n",
+        "        temp = float(data.get(\"min_temp_C\", data.get(\"temperature_C\", 99)))\n",
+        "        extra = \" 🧊 Yes, it might feel cold.\" if temp <= 10 else \" 😊 No, it shouldn't be too cold.\"\n",
+        "\n",
+        "    return response + extra"
+      ],
+      "metadata": {
+        "id": "8jk8qa-5yUT9"
+      },
+      "execution_count": 91,
+      "outputs": []
     }
   ]
 }
