Code with instruction about how to ask the questions

--- a/Assessment_Weather_App_Final_ipynb.ipynb
+++ b/Assessment_Weather_App_Final_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMvs2rXE/qYq0ff1gFvdtb1",
+      "authorship_tag": "ABX9TyO4fSwpHxWSZXOhhYV6IqDt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -856,6 +856,30 @@
         "id": "8jk8qa-5yUT9"
       },
       "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 🧭 How to Ask a Weather Question\n",
+        "- 🌤️ You can ask about the weather forecast **up to 3 days from today**.\n",
+        "- 📍 Your question **must include a city** and a **time reference** like:\n",
+        "  - `tomorrow`, `in 2 days`, `on Friday`, `Saturday`, etc.\n",
+        "- ✅ Examples:\n",
+        "  - `\"Will it rain in Tokyo tomorrow?\"`\n",
+        "  - `\"What’s the weather in Perth on Friday?\"`"
+      ],
+      "metadata": {
+        "id": "sUWY2IC63FXB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LosD37UX2xSB"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
